Fix wrapping issue on dataset preview header row

--- a/src/styles/scss/templates/dataset.scss
+++ b/src/styles/scss/templates/dataset.scss
@@ -8,3 +8,9 @@
     background-color: $color-primary-alt-light;
   }
 }
+
+.dc-truncate {
+  max-width: 85%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
